--- a/_config.yml
+++ b/_config.yml
@@ -57,12 +57,10 @@ highlight_theme: github
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: Zhuang Ma
+author: Claire
 organization:
 organization_url:
-github_username: mzlogin
-location: Wuhan, China
-email: chumpma@gmail.com
+github_username: Clairechn
 
 # ---------------- #
 #    Navigation    #
