--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: https://clairechn.github.io
 date_format: "ordinal"
 title: Claire Chen
 subtitle: "On My Way"
-description: "On My Way"
+description:
 keywords:
 timezone: Asia/Taipei
 encoding: "utf-8"
