--- a/_config.yml
+++ b/_config.yml
@@ -104,11 +104,11 @@ subscribe_rss: /feed.xml
 index:
   banner:
     # 首页 banner 区文字颜色
-    color: "#fff"
+    color: "#000000"
     # 首页导航栏文字颜色
-    nav-color: "rgba(255, 255, 255, .5)"
+    nav-color: "#000000"
     # 首页 banner 区背景颜色
-    background-color: "#4183c4"
+    background-color: "#f5f5f5"
     # 首页 banner 区背景图片
     # background-image: "/assets/images/octicons-bg.png"
     # background-repeat: "no-repeat"
